WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309244
RTCPeerConnection.getStats should reject with invalid selector
https://bugs.webkit.org/show_bug.cgi?id=309244
Summary
RTCPeerConnection.getStats should reject with invalid selector
youenn fablet
Reported
2026-03-05 01:50:13 PST
RTCPeerConnection.getStats should reject with invalid selector
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-05 01:50:25 PST
<
rdar://problem/171793234
>
youenn fablet
Comment 2
2026-03-05 01:52:27 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59967
EWS
Comment 3
2026-03-05 23:40:29 PST
Committed
308782@main
(9752e7eb2bf9): <
https://commits.webkit.org/308782@main
> Reviewed commits have been landed. Closing PR #59967 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug