RTCPeerConnection.getStats should reject with invalid selector rdar://171793234 https://bugs.webkit.org/show_bug.cgi?id=309244

Reviewed by Eric Carlson and Anne van Kesteren.

Align with spec and other browsers by rejecting the promise when track is not one of the remote track of the connection.

Canonical link: https://commits.webkit.org/308782@main